test/conformance/kuttl/reports/background/report-deletion/report-error.yaml
apiVersion: wgpolicyk8s.io/v1alpha2
kind: PolicyReport
metadata:
  ownerReferences:
  - apiVersion: v1
    kind: Pod
    name: badpod01
